`Fixed path handling for images in various controllers and views`

--- a/Da3wa.WebUI/Views/Guest/Details.cshtml
+++ b/Da3wa.WebUI/Views/Guest/Details.cshtml
@@ -149,7 +149,7 @@
                     </h5>
                 </div>
                 <div class="card-body text-center">
-                    <img src="@Model.InvitationImagePath" alt="Invitation" class="img-fluid rounded border" style="max-height: 500px;">
+                    <img src="@Url.Content(Model.InvitationImagePath)" alt="Invitation" class="img-fluid rounded border" style="max-height: 500px;">
                 </div>
             </div>
         }
