--- a/Da3wa.WebUI/Views/Event/Details.cshtml
+++ b/Da3wa.WebUI/Views/Event/Details.cshtml
@@ -93,7 +93,7 @@
                     </h5>
                 </div>
                 <div class="card-body text-center">
-                    <img src="@Model.ImagePath" alt="Event Image" class="img-fluid rounded border" style="max-height: 400px;">
+                    <img src="@Url.Content(Model.ImagePath)" alt="Event Image" class="img-fluid rounded border" style="max-height: 400px;">
                 </div>
             </div>
         }
