--- a/Da3wa.WebUI/Views/Event/Index.cshtml
+++ b/Da3wa.WebUI/Views/Event/Index.cshtml
@@ -62,7 +62,7 @@
                                     <td>
                                         @if (!string.IsNullOrEmpty(@event.ImagePath))
                                         {
-                                            <img src="@(@event.ImagePath)" alt="Event" class="rounded" style="width: 50px; height: 50px; object-fit: cover;">
+                                            <img src="@Url.Content(@event.ImagePath)" alt="Event" class="rounded" style="width: 50px; height: 50px; object-fit: cover;">
                                         }
                                         else
                                         {
