`Updated Dashboard.cshtml view with minor JavaScript changes`

--- a/Da3wa.WebUI/Views/Home/Dashboard.cshtml
+++ b/Da3wa.WebUI/Views/Home/Dashboard.cshtml
@@ -572,12 +572,8 @@
 
 @section Scripts {
     <script>
-        // يمكنك إضافة أي JavaScript مخصص للصفحة هنا
         $(document).ready(function() {
-            // Example: Add click event to view buttons
-            $('.btn-outline-admin').on('click', function() {
-                alert('View button clicked!');
-            });
+            // Dashboard scripts can be added here
         });
     </script>
 }
