--- a/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -655,6 +655,14 @@
                             <i class="fas fa-chevron-down section-toggle float-end"></i>
                         </div>
                         <div class="collapse show" id="systemSection">
+                            <ul class="nav flex-column submenu">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/hangfire" target="_blank">
+                                        <i class="fas fa-tasks"></i>
+                                        <span class="menu-text">Background Jobs</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
