- add logs controllers

--- a/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/Da3wa.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -657,6 +657,12 @@
                         <div class="collapse show" id="systemSection">
                             <ul class="nav flex-column submenu">
                                 <li class="nav-item">
+                                    <a class="nav-link" asp-controller="SystemLogs" asp-action="Index">
+                                        <i class="fas fa-file-alt"></i>
+                                        <span class="menu-text">System Logs</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="/hangfire" target="_blank">
                                         <i class="fas fa-tasks"></i>
                                         <span class="menu-text">Background Jobs</span>
